--- a/img/stack/sprite.stack.html
+++ b/img/stack/sprite.stack.html
@@ -110,9 +110,11 @@ They might well be outsourced to an external stylesheet of course.
  .svg-dice-dims { width: 800px; height: 800px; }
  .svg-download-dims { width: 478.125px; height: 478.125px; }
  .svg-eye-dims { width: 800px; height: 800px; }
+ .svg-favicon-dims { width: 24px; height: 24px; }
  .svg-key-dims { width: 516.375px; height: 516.375px; }
  .svg-lock-dims { width: 516.375px; height: 516.375px; }
  .svg-lock-unlock-dims { width: 592.875px; height: 592.875px; }
+ .svg-logo-dims { width: 24px; height: 24px; }
  .svg-reset-dims { width: 20px; height: 20px; }
  .svg-share-dims { width: 800px; height: 800px; }
  .svg-undo-dims { width: 800px; height: 800px; }
@@ -175,6 +177,12 @@ selector is used to show the very shape that is referenced by the fragment ident
                     </div>
                     <h2>eye, </h2>
                 </li>
+             <li title="favicon">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#favicon" class="svg-favicon-dims" alt="favicon">
+                    </div>
+                    <h2>favicon, </h2>
+                </li>
              <li title="key">
                     <div class="icon-box">
                         <img src="../icons/icons.svg#key" class="svg-key-dims" alt="key">
@@ -192,6 +200,12 @@ selector is used to show the very shape that is referenced by the fragment ident
                         <img src="../icons/icons.svg#lock-unlock" class="svg-lock-unlock-dims" alt="lock-unlock">
                     </div>
                     <h2>lock-unlock, </h2>
+                </li>
+             <li title="logo">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#logo" class="svg-logo-dims" alt="logo">
+                    </div>
+                    <h2>logo, </h2>
                 </li>
              <li title="reset">
                     <div class="icon-box">
@@ -225,7 +239,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
         </section>
         <footer>
-            <p>Generated at Mon, 23 Oct 2023 16:15:06 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+            <p>Generated at Wed, 25 Oct 2023 21:54:21 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
         </footer>
     </body>
 </html>
